--- a/runapp/templates/maps1.html
+++ b/runapp/templates/maps1.html
@@ -101,6 +101,7 @@
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="{{url_for('static', filename='js/leaflet-heat.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/logic.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   </body>
 
 </html>
