--- a/runapp/templates/maps2.html
+++ b/runapp/templates/maps2.html
@@ -100,6 +100,7 @@
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="{{url_for('static', filename='js/leaflet-heat.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/logic2.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   </body>
 
 </html>
