--- a/runapp/templates/maps1.html
+++ b/runapp/templates/maps1.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>TITLE_PAGE</title>
+  <title>2020 Democratic Primary Sentiment Analysis</title>
 
   <!-- This line is money! It points your HTML to the CSS file. -->
   <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
